--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,8 +65,11 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
+    //Navigation
+    implementation "androidx.navigation:navigation-compose:2.4.0-rc01"
+
     //Room
-    def roomVersion = "2.3.0"
+    def roomVersion = "2.4.0"
     implementation "androidx.room:room-runtime:$roomVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
