--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
     //Navigation
-    implementation "androidx.navigation:navigation-compose:2.4.0-rc01"
+    implementation("androidx.navigation:navigation-compose:2.4.0-alpha08")
 
     //Room
     def roomVersion = "2.4.0"
